--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,26 @@
 .grid-container{
 display: grid;
- background-color: rgb(19, 180, 46);
+ grid-template-rows: repeat(7, 1fr) ;
+text-align: center;
+
+ gap: 10px
 }
 body{
+    font-size: 30px;
+    margin-top: 100px;
    background-color: gray;
    color: white;
 }
 .header{
+    
     background-color: rgb(195, 2, 195);
 }
 #aside1{
     background-color: rgb(143, 52, 228);
+}
+.column-container{
+    
+    background-color: rgb(45, 161, 45)
 }
 .column{
     background-color: rgb(198, 14, 100);
