--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,44 @@
 .grid-container{
 display: grid;
- grid-template-rows: repeat(7, 1fr) ;
+ grid-template-rows: 1fr 1fr 3fr 1fr 1fr;
 text-align: center;
-
+align-items: center;
  gap: 10px
+   
+ 
 }
 body{
     font-size: 30px;
-    margin-top: 100px;
-   background-color: gray;
+    margin-top: 50px;
+   background-color: #808080;
    color: white;
+    
 }
 .header{
-    
+    border-radius: 15px;
     background-color: rgb(195, 2, 195);
 }
 #aside1{
+    border-radius: 15px;
     background-color: rgb(143, 52, 228);
 }
 .column-container{
-    
+    border-radius: 15px;
+    display: flex;
+    flex-direction:column;
+    padding: 20px;
     background-color: rgb(45, 161, 45)
 }
 .column{
+    border-radius: 15px;
+    margin-bottom: 10px;
     background-color: rgb(198, 14, 100);
 }
 #aside2{
+    border-radius: 15px;
     background-color: rgb(8, 156, 156);
 }
 .footer{
+    border-radius: 15px;
     background-color: rgb(240, 135, 24);
 }
