--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body{
     margin-top: 50px;
    background-color: #808080;
    color: white;
+    text-align: center;
     
 }
 .header{
@@ -42,3 +43,79 @@ body{
     border-radius: 15px;
     background-color: rgb(240, 135, 24);
 }
+
+@media screen and (min-width: 768px){
+    .aside, .column-container{
+        
+        display: inline-block; 
+        
+        
+    }
+    .aside{
+        width: 20%;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
+    .column-container{
+        width: 48%;
+        padding-top: 50px;
+        padding-bottom: 50px;   
+        margin-bottom: 20px;
+        
+    }
+    .column{
+         font-size: 20px;
+        
+    }      
+    .header{
+        padding-bottom: 50px;
+        margin-top: 50px;
+    }
+    footer {
+        padding-top: 50px;
+    }
+    }
+}
+/*
+@media screen and (min-width: 768px){
+   body{
+    display: flex;
+    flex-direction: column;
+
+   }
+   }
+    #aside1{
+        width: 25%;
+        padding-top: 100px;
+        display: block;
+        
+        
+        
+    }
+    .column-container{
+        width: 25%;
+        margin-bottom: 175px;
+        padding-top: 100px;
+       margin-bottom: 200px;
+       display: block;
+        
+    }
+    #aside2{
+        margin-left: 50%;
+        width: 25%;
+        padding-top: 100px;
+        align-self: flex-end;
+    }
+    
+}     
+       
+        
+        
+
+        
+    
+    
+    
+ 
